Fix "raw page" css to be a little more sane, especially on mobile.

--- a/datagrepper/static/css/raw.css
+++ b/datagrepper/static/css/raw.css
@@ -14,7 +14,6 @@ p {
 
 .datetime {
     margin-bottom: 10px;
-    margin-left: 729px;
     color: #999;
     font-size: 13px;
 }
